--- a/css/styles.css
+++ b/css/styles.css
@@ -86,15 +86,18 @@ img {
 
 .header-list a:hover {
   color: #404bbf;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-list a:focus {
   color: #404bbf;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-list {
   display: flex;
   gap: 40px;
+  position: relative;
 }
 
 .header-list-specifical {
@@ -106,6 +109,17 @@ img {
   line-height: 1.5;
   padding-top: 24px;
   padding-bottom: 24px;
+}
+
+.header-list-specifical.current::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -24px;
+  border-radius: 2px;
+  width: 48px;
+  height: 4px;
+  background-color: #404bbf;
 }
 
 .adress-navigation {
@@ -127,16 +141,29 @@ img {
 
 .header-address a:hover {
   color: #404bbf;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-address a:focus {
   color: #404bbf;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .main-section {
   background-color: #2e2f42;
-  padding-top: 188px;
-  padding-bottom: 188px;
+  padding: 188px 0;
+  max-width: 1440px;
+  margin: 0 auto;
+
+  background-image: linear-gradient(
+      to bottom,
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/background-hero.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 .main-section-title {
@@ -172,11 +199,29 @@ img {
 .main-section-button:hover,
 .main-section-button:focus {
   background-color: #404bbf;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .section-two {
   padding-top: 120px;
   padding-bottom: 120px;
+}
+
+.list-icon {
+  display: flex;
+  align-items: center;
+  border: 1px solid #8e8f99;
+  border-radius: 4px;
+  background-color: #f4f4fd;
+  width: 264px;
+  height: 112px;
+  margin-bottom: 8px;
+}
+
+.icon-features {
+  padding: 24px 100px;
+  width: "64px";
+  height: "64px";
 }
 
 .list-two {
@@ -229,10 +274,13 @@ img {
   background-color: #ffffff;
   flex-basis: calc((100% - 72px) / 4);
   border-radius: 0 0 4px 4px;
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
 .team-group {
-  padding: 32px 0;
+  padding-top: 32px;
+  padding-bottom: 8px;
 }
 
 .team-name {
@@ -252,6 +300,34 @@ img {
   color: #434455;
 }
 
+.team-list-icon {
+  display: flex;
+  gap: 24px;
+  justify-content: center;
+  margin-bottom: 32px;
+}
+
+.team-icon-border {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #4d5ae5;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+}
+
+.team-icon {
+  fill: #f4f4fd;
+  width: 16px;
+  height: 16px;
+}
+
+.team-icon-border:hover {
+  background-color: #404bbf;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .section-portfolio {
   padding-top: 120px;
   padding-bottom: 120px;
@@ -264,6 +340,47 @@ img {
   row-gap: 48px;
 }
 
+.portfolio-list {
+  position: relative;
+  overflow: hidden;
+}
+
+.portfolio-list:hover {
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+}
+
+.overlay {
+  background: #4d5ae5;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transform: translateY(100%);
+  z-index: 2;
+}
+
+.portfolio-overlay-text {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  text-align: left;
+  color: #f4f4fd;
+  padding-top: 40px;
+  padding-left: 42px;
+  padding-right: 42px;
+}
+
+.portfolio-list:hover .overlay {
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transform: translateY(0);
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+}
+
 .portfolio-container {
   border-bottom: 1px solid #e7e9fc;
   border-left: 1px solid #e7e9fc;
@@ -271,6 +388,9 @@ img {
   padding: 32px 16px;
   width: 360px;
   height: 120px;
+  position: relative;
+  background-color: #fff;
+  z-index: 12;
 }
 
 .main-title-portfolio {
@@ -296,6 +416,46 @@ img {
   background-color: #2e2f42;
   padding-top: 100px;
   padding-bottom: 100px;
+}
+
+.footer-list {
+  display: flex;
+  gap: 120px;
+}
+
+.footer-list-icon {
+  display: flex;
+  gap: 16px;
+}
+
+.footer-title {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #fff;
+  margin-bottom: 16px;
+}
+
+.footer-icon-border {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #4d5ae5;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+}
+
+.footer-icon-border:hover {
+  background-color: #31d0aa;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-icon {
+  fill: #f4f4fd;
+  width: 24px;
+  height: 24px;
 }
 
 .footer-logo-start {
