--- a/css/styles.css
+++ b/css/styles.css
@@ -54,6 +54,8 @@ img {
 
 .header {
   border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .header .container {
@@ -86,18 +88,23 @@ img {
 
 .header-list a:hover {
   color: #404bbf;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-list a:focus {
   color: #404bbf;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-list {
   display: flex;
   gap: 40px;
   position: relative;
+}
+
+.header-item {
+  position: relative;
+  color: #404bbf;
 }
 
 .header-list-specifical {
@@ -115,7 +122,7 @@ img {
   content: "";
   position: absolute;
   left: 0;
-  bottom: -24px;
+  bottom: -1px;
   border-radius: 2px;
   width: 48px;
   height: 4px;
@@ -141,12 +148,12 @@ img {
 
 .header-address a:hover {
   color: #404bbf;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-address a:focus {
   color: #404bbf;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .main-section {
@@ -199,7 +206,7 @@ img {
 .main-section-button:hover,
 .main-section-button:focus {
   background-color: #404bbf;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .section-two {
@@ -210,18 +217,13 @@ img {
 .list-icon {
   display: flex;
   align-items: center;
+  justify-content: center;
   border: 1px solid #8e8f99;
   border-radius: 4px;
   background-color: #f4f4fd;
   width: 264px;
   height: 112px;
   margin-bottom: 8px;
-}
-
-.icon-features {
-  padding: 24px 100px;
-  width: "64px";
-  height: "64px";
 }
 
 .list-two {
@@ -302,9 +304,14 @@ img {
 
 .team-list-icon {
   display: flex;
-  gap: 24px;
   justify-content: center;
+  gap: 24px;
   margin-bottom: 32px;
+}
+
+.team-item-icon {
+  width: 40px;
+  height: 40px;
 }
 
 .team-icon-border {
@@ -312,20 +319,18 @@ img {
   align-items: center;
   justify-content: center;
   background-color: #4d5ae5;
-  width: 40px;
-  height: 40px;
+  width: 100%;
+  height: 100%;
   border-radius: 50%;
 }
 
 .team-icon {
   fill: #f4f4fd;
-  width: 16px;
-  height: 16px;
 }
 
 .team-icon-border:hover {
   background-color: #404bbf;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .section-portfolio {
@@ -340,41 +345,34 @@ img {
   row-gap: 48px;
 }
 
-.portfolio-list {
+.portfolio-list:hover {
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.overlay {
   position: relative;
   overflow: hidden;
 }
 
-.portfolio-list:hover {
-  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
-    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
-}
-
-.overlay {
-  background: #4d5ae5;
+.portfolio-overlay-text {
   position: absolute;
   top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  transform: translateY(100%);
-  z-index: 2;
-}
-
-.portfolio-overlay-text {
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   text-align: left;
   color: #f4f4fd;
-  padding-top: 40px;
-  padding-left: 42px;
-  padding-right: 42px;
+  padding: 40px 32px;
+  background-color: #4d5ae5;
+  height: 100%;
+  width: 100%;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-list:hover .overlay {
+.overlay:hover .portfolio-overlay-text {
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transform: translateY(0);
   box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
@@ -420,42 +418,11 @@ img {
 
 .footer-list {
   display: flex;
-  gap: 120px;
+  align-items: baseline;
 }
 
-.footer-list-icon {
-  display: flex;
-  gap: 16px;
-}
-
-.footer-title {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #fff;
-  margin-bottom: 16px;
-}
-
-.footer-icon-border {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: #4d5ae5;
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-}
-
-.footer-icon-border:hover {
-  background-color: #31d0aa;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.footer-icon {
-  fill: #f4f4fd;
-  width: 24px;
-  height: 24px;
+.footer-item {
+  margin-right: 120px;
 }
 
 .footer-logo-start {
@@ -480,4 +447,47 @@ img {
   letter-spacing: 0.02em;
   color: #f4f4fd;
   max-width: 264px;
+}
+
+.footer-title {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #fff;
+  margin-bottom: 16px;
+}
+
+.footer-list-icon {
+  display: flex;
+  gap: 16px;
+}
+
+.footer-item-icon {
+  width: 40px;
+  height: 40px;
+}
+
+.footer-icon-border {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #4d5ae5;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+}
+
+.footer-icon-border:hover {
+  background-color: #31d0aa;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-icon-border:focus {
+  background-color: #31d0aa;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-icon {
+  fill: #f4f4fd;
 }
