--- a/css/styles.css
+++ b/css/styles.css
@@ -116,6 +116,12 @@ img {
   line-height: 1.5;
   padding-top: 24px;
   padding-bottom: 24px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.header-list-specifical.current {
+  position: relative;
+  color: #404bbf;
 }
 
 .header-list-specifical.current::after {
@@ -144,6 +150,7 @@ img {
   letter-spacing: 0.02em;
   color: #434455;
   text-decoration: none;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-address a:hover {
@@ -201,6 +208,7 @@ img {
   min-width: 169px;
   margin-top: 48px;
   border: none;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .main-section-button:hover,
@@ -281,8 +289,7 @@ img {
 }
 
 .team-group {
-  padding-top: 32px;
-  padding-bottom: 8px;
+  padding: 32px 0;
 }
 
 .team-name {
@@ -343,6 +350,10 @@ img {
   flex-wrap: wrap;
   column-gap: 24px;
   row-gap: 48px;
+}
+
+.portfolio-list {
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-list:hover {
@@ -416,7 +427,11 @@ img {
   padding-bottom: 100px;
 }
 
-.footer-list {
+.container-footer {
+  width: 1158px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 0 auto;
   display: flex;
   align-items: baseline;
 }
@@ -476,6 +491,7 @@ img {
   width: 100%;
   height: 100%;
   border-radius: 50%;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-icon-border:hover {
