--- a/css/styles.css
+++ b/css/styles.css
@@ -317,6 +317,7 @@ img {
 }
 
 .team-item-icon {
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   width: 40px;
   height: 40px;
 }
@@ -336,6 +337,11 @@ img {
 }
 
 .team-icon-border:hover {
+  background-color: #404bbf;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.team-icon-border:focus {
   background-color: #404bbf;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
