--- a/css/styles.css
+++ b/css/styles.css
@@ -116,6 +116,7 @@ img {
   line-height: 1.5;
   padding-top: 24px;
   padding-bottom: 24px;
+  display: block;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -313,13 +314,13 @@ img {
   display: flex;
   justify-content: center;
   gap: 24px;
-  margin-bottom: 32px;
 }
 
 .team-item-icon {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   width: 40px;
   height: 40px;
+  margin-top: 8px;
 }
 
 .team-icon-border {
@@ -389,7 +390,7 @@ img {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.overlay:hover .portfolio-overlay-text {
+.portfolio-list:hover .portfolio-overlay-text {
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transform: translateY(0);
   box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
